# B_STAR

./: .gitignore  README.md  batch_run.sh  main.py  setup_env.sh
content/: virtual_base.urdf
content/configs/robot/: franka.yml  franka_w_base.yml  iiwa.yml  iiwa_w_base.yml  kinova_gen3.yml  kinova_gen3_w_base.yml  ur10e.yml  ur10e_w_base.yml
data/benchmark/: franka_traj_num_100_length_16.pkl  franka_traj_num_100_length_2.pkl  franka_traj_num_100_length_32.pkl  franka_traj_num_100_length_4.pkl  franka_traj_num_100_length_64.pkl  franka_traj_num_100_length_8.pkl  iiwa_traj_num_100_length_16.pkl  iiwa_traj_num_100_length_2.pkl  iiwa_traj_num_100_length_32.pkl  iiwa_traj_num_100_length_4.pkl  iiwa_traj_num_100_length_64.pkl  iiwa_traj_num_100_length_8.pkl  kinova_gen3_traj_num_100_length_16.pkl  kinova_gen3_traj_num_100_length_2.pkl  kinova_gen3_traj_num_100_length_32.pkl  kinova_gen3_traj_num_100_length_4.pkl  kinova_gen3_traj_num_100_length_64.pkl  kinova_gen3_traj_num_100_length_8.pkl  ur10e_traj_num_100_length_16.pkl  ur10e_traj_num_100_length_2.pkl  ur10e_traj_num_100_length_32.pkl  ur10e_traj_num_100_length_4.pkl  ur10e_traj_num_100_length_64.pkl  ur10e_traj_num_100_length_8.pkl
opt_cfg/: default.yml
opt_prob/: __init__.py  problem.py  tr_sq.py
opt_term/: __init__.py  collision_term.py  kinematics_term.py  term.py
opt_term/cpp/: CMakeLists.txt  setup.py
opt_term/cpp/include/: discrete_collision_term.hpp  ee_pose_term.hpp
opt_term/cpp/src/: discrete_collision_term.cpp  ee_pose_term.cpp  opt_term.cpp
utils/: logger.py  robot.py
(+8 files in other folders)
